# static-dispatch

./: Cargo.toml  changelog.md  license  readme.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
tests/: async_trait.rs  both_generics.rs  const_generics.rs  enum_generics.rs  explicit_self.rs  generics.rs  impl_arg.rs  implicit_self.rs  lifetime.rs  multiple_enums.rs  mutliple_traits.rs  no_std.rs  other_crate.rs  other_module.rs  rename.rs  return_value.rs
tests/extern_crate/: Cargo.toml
tests/extern_crate/src/: lib.rs
