[package]
name = "static-dispatch-macros"
version.workspace = true
edition.workspace = true

authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
